| Summary: | ASTERISK-29108: resource_endpoints.c : Memory leak if endpoint not found | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2020-10-05 10:41:41 | Date Closed: | 2020-10-08 04:52:29 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari_endpoints |
| Versions: | 16.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When using ARI to send a message to an endpoint, the HTTP response content is not properly freed if the endpoint does not exist.
I think the following block in resource_endpoints.c:212 is missing a return statement : {code} if (ast_msg_send(msg, to, from)) { ast_ari_response_error(response, 404, "Not Found", "Endpoint not found"); } {code} I will provide a patch. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-10-05 10:41:41.506-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2020-10-08 04:52:30.305-0500 Change 15042 merged by Friendly Automation: resource_endpoints.c: memory leak when providing a 404 response [https://gerrit.asterisk.org/c/asterisk/+/15042|https://gerrit.asterisk.org/c/asterisk/+/15042] By: Friendly Automation (friendly-automation) 2020-10-08 04:55:53.429-0500 Change 15045 merged by Friendly Automation: resource_endpoints.c: memory leak when providing a 404 response [https://gerrit.asterisk.org/c/asterisk/+/15045|https://gerrit.asterisk.org/c/asterisk/+/15045] By: Friendly Automation (friendly-automation) 2020-10-08 04:57:28.854-0500 Change 15043 merged by Friendly Automation: resource_endpoints.c: memory leak when providing a 404 response [https://gerrit.asterisk.org/c/asterisk/+/15043|https://gerrit.asterisk.org/c/asterisk/+/15043] By: Friendly Automation (friendly-automation) 2020-10-08 05:05:42.435-0500 Change 15044 merged by Joshua Colp: resource_endpoints.c: memory leak when providing a 404 response [https://gerrit.asterisk.org/c/asterisk/+/15044|https://gerrit.asterisk.org/c/asterisk/+/15044] By: Friendly Automation (friendly-automation) 2020-10-08 05:05:58.245-0500 Change 15039 merged by Joshua Colp: resource_endpoints.c: memory leak when providing a 404 response [https://gerrit.asterisk.org/c/asterisk/+/15039|https://gerrit.asterisk.org/c/asterisk/+/15039] | ||